# mcpi

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: problems.py  run.py
examples/: lorenz.py  quickstart.py
mcpi/: __init__.py  _chebyshev.py  _kernel.py  solver.py
scripts/: make_readme_plots.py
tests/: test_basic.py  test_chebyshev.py  test_solver.py
