[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpi"
version = "0.1.0"
description = "Modified Chebyshev-Picard Iteration for ODE integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MCPI contributors"},
]
keywords = ["ode", "numerical-integration", "chebyshev", "picard", "spectral", "ivp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "numba>=0.56",
]

[project.optional-dependencies]
bench = [
    "scipy>=1.10",
    "matplotlib>=3.5",
    "mpmath>=1.3",
]
test = [
    "pytest>=7.0",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpi*"]
exclude = ["benchmarks*", "examples*", "tests*"]
